Latex --- working on OpenGL part

--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -73,15 +73,15 @@ What People do?
 %------------------------------------------------
 
 \section{Procedure}
-In this section we discuss our approach to solving the problem at hand. We started by considering the corresponding two-dimensional situation where a planar object with a predetermined number of links is reaching towards a point in the plane. Our first attempt at a solution was to use forward kinematics where at each time-step we calculated the subsequent position using the current state and the desired position of the end-point. The first implementation was done in Matlab as we wanted to ensure that the method works as desired before exporting it to the OpenGL framework. In the meantime, we started working on the basic structure in OpenGL, for instance we drew the necessary primitives, such as triangles, squares and lines in two-dimensions, and proceeded by including some appropriate data structures and some primitive graphical user interface. \\
+In this section we discuss our approach to solving the problem at hand. We started by considering the corresponding two-dimensional situation where a planar object with a predetermined number of links is reaching towards a point in the plane. Our first attempt at a solution was to use forward kinematics where at each time-step we calculated the subsequent position using the current state and the desired position of the end-point. The first implementation was done in Matlab as we wanted to ensure that the method works as desired before exporting it to the OpenGL framework. In the meantime, we started working on the basic structure in OpenGL, for instance we drew the necessary primitives, such as triangles, squares and lines in two-dimensions, and proceeded by including some appropriate data structures and some primitive user interface. \\
 
-The next step was to apply inverse kinematics in the case of our two-dimensional problem. We chose to use the Inverse Jacobian technique and implemented the method with both full inverse of the Jacobian matrix as well as the pseudoinverse. The motion of the object was displayed graphically, and we altered the number of limbs in order to test the performance of our method. At this stage the method still had a number of shortcomings even though it was restricted to motion in a plane. Firstly, the motion was not stable when the object was reaching towards a point that was outside the circular region. Secondly, the method favoured the movement of certain limbs without us explicitly specifying the constraints. We also improved the OpenGL GUI by adding mouse capture, and added chain class with bones and joints (why???). In both Matlab and OpenGL the system is described using relative angles, i.e. starting at the origin, each subsequent angle is defined in the coordinate system of the previous one (picture???). \\
+The next step was to apply inverse kinematics in the case of our two-dimensional problem. We chose to use the Inverse Jacobian technique and implemented the method with both full inverse of the Jacobian matrix as well as the pseudoinverse. The motion of the object was displayed graphically, and we altered the number of limbs in order to test the performance of our method. At this stage the method still had a number of shortcomings even though it was restricted to motion in a plane. Firstly, the motion was not stable when the object was reaching towards a point that was outside the circular region. Secondly, the method favoured the movement of certain limbs without us explicitly specifying the constraints. We also improved the OpenGL user interface by adding mouse capture, and added chain class with bones and joints. In both Matlab and OpenGL the system is described using relative angles, i.e. starting at the origin, each subsequent angle is defined in the coordinate system of the previous one (picture???). \\
 
 The main questions we faced at this point had to do with local behaviour of each joint and the numerical method used to solve the optimisation problem. The movement of the first few joints (those closest to the origin) appeared significantly more restricted than the movement of the end joints. To solve this issue, we normalise to get global behaviour of the whole system as opposed to local behaviour of each joint. In addition, the simulation naturally slows down as it gets very close to the destination due to the nature of the numerical method which tends to oscillate around the minimum point. This behaviour can be advantageous (especially in robotics) as it results in slow-down motion as it gets close to reaching the goal (e.g. grabbing an object or touching a surface) so as to avoid a severe collision. \\
 
 We also note that the motion of the system is task-dependent, hence favouring the movement of a number of selected joints is reasonable. For example, if we assume that the object we are modelling is an arm, and the motion is defined as the arm reaching for a nearby object, it is logical to assume that the rotation of the elbow joint will be favoured against the rotation of the shoulder joint, etc. Therefore, we introduce a weight vector that is used to control the importance of the motion of each joint, and added constrains on the angles.\\
 
-We continued to work on the graphical implementation and improved it in a number of ways. The simulation and rendering were separated into two different threads so that we can analyse the modelling independently from the displaying. What is more, we started displaying the trace left by the tip of the object which makes it easier to track the motion of the object and adds visual appeal. \\
+We continued to work on the graphical implementation and improved it in a number of ways. The simulation and rendering were separated into two different threads so that the speed of rendering does not affect the speed of the simulation (paraphrase???) . What is more, we started displaying the trace left by the tip of the object which makes it easier to track the motion of the object and adds visual appeal. \\
 
 At this stage the Matlab and the OpenGL implementations were still independent, so we started importing the numerical method from Matlab to OpenGL. The resulting model was two-dimensional, used inverse kinematics, could be adapted to any number of limbs/joints, and had a simple user interface. \\
 
@@ -97,6 +97,36 @@ Let us now consider the implementation in both Matlab and OpenGL in more detail.
     \item Why we use what we use (e.g. Inverse Jacobian)
   \end{enumerate}
 \subsection{ Port the code to C++, OpenGL}
+We decided to use OpenGL 4.3 so it uses the shaders introduced after 3.3 version which uses a flexible pipeline. We use the following libraries: GLFW for window managing, GLM includes the matrix operations and matrix-vectors data types, boost provides smart pointers (you don't have to take care of the memory allocation), glew is needed for OpenGL extensions. We're also using C++11 standard because it gives us the threading (mutex objects) which are nicely implemented there. \\
+
+To model our world each object has it's own transformation matrix, called model. Then there is a projection matrix that describes the mapping of a pinhole camera that plots 3d world on a 2d screen. In between those there is a camera matrix; for every object on the scene, pixel coordinates are defined by multiplying the vertex by the MVP transformation matrix which gives the position of each pixel on the screen. (MVP [x y z 1] = [u  v 1].) \\
+
+In the first version we would create all buffers for each object on each frame and destroy them at the end of the frame. This was inefficient, which we fixed by using binding (setting as the active) and unbinding preallocated buffer for each object. \\
+
+We have vertex object class that encapsulated the buffer objects used by opengl and for that it uses the VAO, each vertex object has its own VAO attribute. For 2d we use simple shader programs without lighting and we specify the colour directly. The actual implementation uses vertex buffer object for vertices so the object would have only vertices sequentially in that buffer and then we have a colour buffer of the same size so the corresponding position have corresponding colours. The element buffer object EBO contains index to a given vertex; it allows us not to have repeated vertices and draw more efficiently. At first what was implemented was lines, squares and triangles. We did orthographic projection as we were in 2d. We included an FPS counter to see how fast the scene is being rendered. The object implemented interface to a drawable class so that they can all be treated equally by  the renderer, so the window draws drawable objects and does not distinguish between them. The line, square and triangle are all subclass of the VertexObject class. At this point when we added the chain it was drawn using lines for bones and joints were rectangles. We are suing 4x4 rotation and translation matrices so for each joint and at each time step we \(\prod_{i=0}^I\).  We now update to rectangles for bones. \\
+
+The synchronisation is encapsulated in simulation controller class and it uses mutex; it controls access to the critical sections (look up) in updating the simulation and when the rendering accesses that data, and it's protected by a mutex. \\
+
+We draw the trail using circular array (for index and vertex buffers to we avoid having to reallocate a new buffer when we run out of space) to achieve efficient rendering. At first the train thing was not using the circular array so when we called render on a buffer (see picture). First, a pointer says 0, and we're not drawing anything, then We want to update the data in memory as little as possible so the circular array is so fast and efficient. \\
+
+At this stage we added the simulation code for 2d and we had a triangle to mark the goal position. The made an inverse orthogonal projection using the mouse position so the user could click on a point in the screen and set is as a goal. \\
+
+At first the simulation thread was accessing the rendering state and that could cause it to fail if the frames per second was high (on NVIDIA card); that was solved by separating the code by having the simulation only access the simulation data. So we added mutex and created a new class called chain model that only has simulation data, and the chain class is now the subclass of the chain model and adds the rendering data to the chain model. The same applies for bone and joint classes. \\
+
+The chain chacks when it's close to the goal and it stops at a given threshold, so update Jacobian loop is not called though the simulation thread is still running and it's waiting for a new goal (it's an infinite loop). \\
+
+For the 3d modelling we added keyboard input control. We are suing perspective projection and we added camera movement. With the mouse we change the camera transformation. And with keyboard we change the lookAtVector which corresponds to changing the position of the camera. The goal is moved using the camera position update where we update the position in the direction of the lookAtVector.\\
+
+For 3d we introduce rectangular parallelepipeds. In order to implement Gouraud shading, we added normals for these objects, they point outwards from every vertices and use the mean of all the squares that the vertex is part of.Interpolating??? \\
+
+We added a second rotation angle (x,y,0 -> x,y,z, rotations with z. Now first with z then with y. \(R_z R_y T\). We hence added the solver for 3d. \\
+
+We added a maximum number of iterations so it would stop simulating after that. Now while it is waiting for a new goal, it checks every half a second. When the point goal is added, it goes back to simulating. It is simulating every 20 ms, the time step had to be decreased to 10-6 without the sleep time, otherwise it moved too fast. Sleep time makes the computational load smaller on the CPU (i.e. we achieve the same accuracy with less load on the CPU). 
+
+
+
+
+
     \begin{enumerate}
     \item Issues
     \item How we solve them
