--- a/Latex/ReportAG.tex
+++ b/Latex/ReportAG.tex
@@ -97,31 +97,33 @@ Let us now consider the implementation in both Matlab and OpenGL in more detail.
     \item Why we use what we use (e.g. Inverse Jacobian)
   \end{enumerate}
 \subsection{ Port the code to C++, OpenGL}
-We decided to use OpenGL 4.3 so it uses the shaders introduced after 3.3 version which uses a flexible pipeline. We use the following libraries: GLFW for window managing, GLM includes the matrix operations and matrix-vectors data types, boost provides smart pointers (you don't have to take care of the memory allocation), glew is needed for OpenGL extensions. We're also using C++11 standard because it gives us the threading (mutex objects) which are nicely implemented there. \\
+Our software was built on top of OpenGL version 4.3 so we can adopt the shaders introduced after 3.3 version, which uses a flexible pipeline. The following libraries are employed: GLFW for window managing, GLM  for including the matrix operations and matrix-vector data types, Boost provides smart pointers (which simplify the allocation of memory), GLEW which efficiently check which OpenGL extensions are supported on the platform that is used. The C++11 standard is used as it allows us to perform the threading (mutual exclusion objects). \\
 
-To model our world each object has it's own transformation matrix, called model. Then there is a projection matrix that describes the mapping of a pinhole camera that plots 3d world on a 2d screen. In between those there is a camera matrix; for every object on the scene, pixel coordinates are defined by multiplying the vertex by the MVP transformation matrix which gives the position of each pixel on the screen. (MVP [x y z 1] = [u  v 1].) \\
+First, we consider all the necessary conversions that let us display the three-dimensional world on a two-dimensional screen surface. Initially we have the \(z\) value set to zero, and hence worked in a two-dimensional space. In our world model each object has it's own transformation matrix, called a model. Another transformation matrix, known as the projection matrix describes the mapping of a pinhole camera which plots the three-dimensional world onto a two-dimensional screen. In between the two aforementioned matrices, there is a camera matrix. For every object in the scene, pixel/screen coordinates \([u, v, 1]\) are defined by multiplying the vertices of each object by the Projection-View-Model (MVP) transformation matrix which gives the position of each pixel on the screen, i.e. transformed vertex = MVP *  object vertex. \\
 
-In the first version we would create all buffers for each object on each frame and destroy them at the end of the frame. This was inefficient, which we fixed by using binding (setting as the active) and unbinding preallocated buffer for each object. \\
+In the first version of our software, we would create all the buffers for each object on each frame and destroy them at the end of each frame, which was inefficient. The problem was fixed by allocating buffer objects (that store unformatted memory on the GPU) for each object at the start of the simulation, and then binding the framework to allocated storage (setting as the active) and unbinding. \\
 
-We have vertex object class that encapsulated the buffer objects used by opengl and for that it uses the VAO, each vertex object has its own VAO attribute. For 2d we use simple shader programs without lighting and we specify the colour directly. The actual implementation uses vertex buffer object for vertices so the object would have only vertices sequentially in that buffer and then we have a colour buffer of the same size so the corresponding position have corresponding colours. The element buffer object EBO contains index to a given vertex; it allows us not to have repeated vertices and draw more efficiently. At first what was implemented was lines, squares and triangles. We did orthographic projection as we were in 2d. We included an FPS counter to see how fast the scene is being rendered. The object implemented interface to a drawable class so that they can all be treated equally by  the renderer, so the window draws drawable objects and does not distinguish between them. The line, square and triangle are all subclass of the VertexObject class. At this point when we added the chain it was drawn using lines for bones and joints were rectangles. We are suing 4x4 rotation and translation matrices so for each joint and at each time step we \(\prod_{i=0}^I\).  We now update to rectangles for bones. \\
+Next, we set up the necessary objects for rendering. We create a vertex object class that encapsulated the buffer objects used by OpenGL. The vertex specification is performed using the Vertex Array Object (VAO), and each vertex object has its own VAO attribute. For the two-dimensional model we adopt a simple shader program without lighting and we specify the colour directly. The actual implementation uses a vertex buffer object for vertices so that each object has only the vertices listed sequentially in the corresponding buffer, and we have a colour buffer of an identical size that contains the corresponding colours. The element buffer object (EBO) contains indices to a given vertex; it allows us to avoid replication of vertices and draw more efficiently. In particular, to define any rectangle (quad) that is a combination of two triangles, we only need to specify four vertices instead of using all six. \\
 
-The synchronisation is encapsulated in simulation controller class and it uses mutex; it controls access to the critical sections (look up) in updating the simulation and when the rendering accesses that data, and it's protected by a mutex. \\
+The initial implementation consisted of lines, squares and triangles, and an orthographic projection was used to represent the objects in two dimensions. To gain insight into the performance of our model, we included a frames per second counter which indicates how fast the scene is being rendered. In order to draw an objects, we implemented a class called \texttt{drawable} was implemented. All the objects that need to be displayed have to implement an interface defined by the \texttt{drawable} class and possess a function called \texttt{draw}. The window draws drawable objects and does not distinguish between them. The line, square and triangle are all subclass of the VertexObject class which itself is a subclass of drawable. At this point we added the chain of rectangles and lines where lines represented bones and rectangles were joints. A \(4 \times 4\) rotation and translation matrices were introduced, so for each joint and at each time step the following calculation is performed:  \(\prod_{i=0}^I R_i T_i\) where \(R_i\) stands for the rotation of the joint and \(T_i\) corresponds to the translation of each bone. \\
 
-We draw the trail using circular array (for index and vertex buffers to we avoid having to reallocate a new buffer when we run out of space) to achieve efficient rendering. At first the train thing was not using the circular array so when we called render on a buffer (see picture). First, a pointer says 0, and we're not drawing anything, then We want to update the data in memory as little as possible so the circular array is so fast and efficient. \\
+To get a better understanding of the simulation, we made the simulation process independent of rendering. The synchronisation of these two processes is encapsulated in simulation controller class which uses mutual exclusion (mutex). Simulation and rendering are performed on two different threads, and have to access a shared resource concurrently. The rendering process has access to all the chain data while the simulation only uses the angles (taken from the copy of the chain) to perform the numerical calculations which advance the motion in time. The simulation runs almost continuously, it stops only to allow the renderer to look up the angle values each time it finishes rendering. To make sure that the rendered gets relevant information, i.e. all of the values for angles were calculated at the same simulation step, we use locks. This synchronisation mechanism allows the simulation and the rendering to perform their respective tasks as quickly as possible. \\
 
-At this stage we added the simulation code for 2d and we had a triangle to mark the goal position. The made an inverse orthogonal projection using the mouse position so the user could click on a point in the screen and set is as a goal. \\
+For visual appeal, we draw a trail that follows the moving objects. The most efficient rendering is achieved using a circular array; a array is allocated on the GPU at the beginning of the simulation and we are tracking the movement of the tip of the chain. Each time the tip moves a sufficient (predetermined) amount, we record the current position and include it in the circular array. Once we run out of space, we return to the start of the array and replace the first value with the new one. Then the rendering is performed sequentially with all remaining values unchanged until we again reach the end of the array. This let's us update the data in memory as little as possible making the use of a circular array fast and efficient. \\
 
-At first the simulation thread was accessing the rendering state and that could cause it to fail if the frames per second was high (on NVIDIA card); that was solved by separating the code by having the simulation only access the simulation data. So we added mutex and created a new class called chain model that only has simulation data, and the chain class is now the subclass of the chain model and adds the rendering data to the chain model. The same applies for bone and joint classes. \\
+At this stage we added the simulation code originally developed in Matlab to our the two-dimensional model. To allow user interface, we draw a triangle which could be moved using the mouse, and was used to mark the goal position. The mouse position was transformed using an inverse orthogonal projection. \\
 
-The chain chacks when it's close to the goal and it stops at a given threshold, so update Jacobian loop is not called though the simulation thread is still running and it's waiting for a new goal (it's an infinite loop). \\
+One of the problems we faced had to do with the simulation thread accessing the rendering state, causing the software to fail if the frame rate was high (e.g. on the NVIDIA card). The problem was solved by allowing the simulation to access only the simulation data. Here we also used mutual exclusion; a new class, called chain model, was created that only had the simulation data. The chain class is a subclass of the chain model and adds the rendering data to the chain model. The same applies to bone and joint classes. \\
 
-For the 3d modelling we added keyboard input control. We are suing perspective projection and we added camera movement. With the mouse we change the camera transformation. And with keyboard we change the lookAtVector which corresponds to changing the position of the camera. The goal is moved using the camera position update where we update the position in the direction of the lookAtVector.\\
+In order to create an infinite simulation (i.e. a simulation that does not come to a halt once it gets close to the goal), we included an infinite loop. The simulation checks when it's close to the goal and it stops at a given threshold, so update Jacobian loop is not called though the simulation thread is still running. The user can then input a new goal position, which causes the simulation to resume and reach for the new goal position. \\
 
-For 3d we introduce rectangular parallelepipeds. In order to implement Gouraud shading, we added normals for these objects, they point outwards from every vertices and use the mean of all the squares that the vertex is part of.Interpolating??? \\
+Our final improvement involved adapting the simulation and the display to work in a three-dimensional case. We construct the chain using rectangular parallelepipeds, and implemented Gouraud shading. First, we added surface normals to all vertices; they point outwards from every vertices that is on the surface of the object, and for the vertices which are on the edges we use the mean of the neighbouring surface normals. Local illumination model combines the ambient, diffuse and specular light to give the colour intensities of the reflections, and the  final shading is achieved by interpolating the colour at the vertices. \\
 
-We added a second rotation angle (x,y,0 -> x,y,z, rotations with z. Now first with z then with y. \(R_z R_y T\). We hence added the solver for 3d. \\
+In addition, we included keyboard input control. In the final version the user is able to control the camera angle by moving the mouse, and change the distance from the camera to the scene using the keyboard. In particular, we use the mouse to change the angle of the camera with respect to the \texttt{LookAtVector} and use the keyboard to change the \texttt{lookAtVector} which corresponds to changing the position of the camera in the direction for the sight. The goal is moved using the camera position update (while right-clicking), where we update the position in the direction of the \texttt{lookAtVector}.\\
 
-We added a maximum number of iterations so it would stop simulating after that. Now while it is waiting for a new goal, it checks every half a second. When the point goal is added, it goes back to simulating. It is simulating every 20 ms, the time step had to be decreased to 10-6 without the sleep time, otherwise it moved too fast. Sleep time makes the computational load smaller on the CPU (i.e. we achieve the same accuracy with less load on the CPU). 
+At this stage the model was displayed in three dimensions but was still confined to moving in the plane. We added a second rotation angle resulting in a rotation with respect to the \(z\)-axis followed by a rotation with respect to the \(y\)-axis, i.e. \( \mathbf{R}_z \mathbf{R}_y \mathbf{T}\). The resulting solver is fully three-dimensional. \\
+
+Final, a maximum number of simulation steps was specified to ensure that the simulation eventually ended in case the goal was unreachable. Also, while the model is waiting for a new goal, it checks every half a second, and once a point goal is added, it goes back to simulating. We had to artificially increase the time in the simulation (now it performs a simulation step and then waits for 20 ms), because otherwise the time step had to be decreased to \(10^{-6}\) which resulted in unreasonably fast motion. Sleep time makes the computational load smaller on the CPU (i.e. we achieve the same accuracy with a lesser load on the CPU). 
 
 
 
